# vocabulary

./: .gitignore  AGENTS.md  BROWSE_FUNCTIONALITY_PROTECTION.md  CLAUDE.md  CRON_JOBS.md  DATABASE_CENTRALIZATION.md  DATABASE_CLEANUP_SUMMARY.md  FREE_TTS_STRATEGY.md  MYSQL_OPTIMIZATION_GUIDE.md  NEXT_BUTTON_COMPREHENSIVE_TEST_RESULTS.md  PERFORMANCE_OPTIMIZATIONS.md  PROGRESS_TRACKING_SYSTEM_SUMMARY.md  PRONUNCIATION_SYSTEM_README.md  RARITY_MAINTENANCE.md  README.md  README_SUPABASE_MIGRATION.md  REFACTORING_SUMMARY.md  SIMILARITY_MAINTENANCE.md  USER_MANAGEMENT_GUIDE.md  WEB_APP_RARITY_REFACTORING.md  analyze_frequency_correlation.py  audit_pronunciation_coverage.py  auth.py  backup_database.py  backup_database_python.py  brf_wordfreq.py  browse_output.html  build_pronunciation_library.py  check_admin_users.py  check_candidates_table.py  check_database.py  check_database_schema.py  check_defined_table.py  check_progress.py  check_quiz_page.py  check_wordfreq_status.py  chunked_similarity_storage.py  circular_definition_detector.py  classify_all_domains.py  cmudict-0.7b.txt  (+105 more)
.claude/: settings.local.json
.claude/agents/: ux-reviewer-implementer.md
abandoned/experimental_ingestion/: README.md  create_candidate_terms_tables.sql
abandoned/experimental_ingestion/ingestion/: definitions.py  filters.py  scoring.py
analysis/: __init__.py  consolidated_methods.py  definition_similarity_calculator.py  domain_classifier.py  domain_clustering.py  domain_frequency_analysis.py  frequency_analysis.py  frequency_analysis_system.py  independent_frequency_calculator.py  plot_final_rarity.py  plot_frequency_measures.py  process_definitions_chunked.py  recalculate_frequencies.py  run_comprehensive_analysis.py
analysis/migration/: RARITY_MIGRATION_README.md  apply_postgres_schema.py  backup_postgres.sh  create_indexes_constraints.py  create_rarity_materialized_view.sql  create_views_postgres.py  generate_schema_metadata.py  mysql_schema.sql  postgres_schema.sql  transfer_mysql_to_postgres.py
archived/cleanup/: database_cleanup_analyzer.py  execute_cleanup.py  final_cleanup.py  manual_cleanup.py  verify_cleanup.py
archived/harvester_legacy/: daily_harvest_scheduler.py  multi_source_harvester.py  vocabulary_orchestrator.py
archived/migration/: config_supabase.py  fix_database_schema.py  migrate_to_supabase.py  update_apps_for_supabase.py  validate_migration.py
archived/obsolete/: check_browse_functionality.py  check_phonetic_data.py  check_progress_tables.py  check_recent_sessions.py  definition_similarity_design.py  endpoint_verification.py  final_verification.py  process_all_definitions.py  process_all_definitions_fixed.py  quick_analysis_sample.py  quick_source_test.py  remove_last_table.py  resumable_gutenberg_harvester.py  simple_vocab_app_backup.py  update_source_enum.py  working_vocab_app.py
archived/python_scripts/: update_final_rarity_LEGACY.py
archived/tests/: test_all_sources.py  test_analytics.py  test_direct_mysql.py  test_frequency_calculator.py  test_search_tools.py  test_validation_integration.py  test_wiktionary_parsing.py
core/: .env.template  __init__.py  analytics.py  auth.py  comprehensive_definition_lookup.py  config.py  custom_database_manager.py  database_manager.py  definition_filler.py  english_word_validator.py  quiz_tracking.py  secure_config.py  vocabulary_deduplicator.py
harvester/: extract_vocabulary.py
harvesters/: __init__.py  autonomous_spider.py  daily_harvest_scheduler.py  enhanced_vocabulary_list_harvester.py  gutenberg_harvester.py  multi_source_harvester.py  progress_tracker.py  respectful_scraper.py  revised_vocabulary_harvester.py  universal_vocabulary_extractor.py  url_harvester.py  vocabulary_list_harvester.py  vocabulary_orchestrator.py  wiktionary_harvester.py  wordlist_only_harvester.py
migrations/: add_no_definition_table.sql  create_pronunciation_files_table.sql
mysql/: __init__.py  connector.py
pronunciation/: __init__.py  cuda_similarity_calculator.py  espeak_fix.py  modern_pronunciation_system.py  pronunciation_generator.py
scripts/: build_complete_ngram_index.py  check_frequency_status.py  check_similarity_status.py  cron_example.sh  download_ngrams_v3_2020.py  maintain_obsolete_words.py  maintain_pronunciation.py  maintain_rarity.py  maintain_similarity.py  mark_obsolete_words.py  update_definition_links.py  update_missing_definitions.py
src/: MatchingQuiz.jsx  SimpleMatchingQuiz.jsx  index.js
static/js/: matching-quiz.js  visualizations.js
temp/: getngrams.py
templates/: admin_candidates.html  admin_candidates_batch.html  admin_dashboard.html  admin_definitions.html  analytics.html  base.html  browse.html  candidate_detail.html  candidates.html  flashcard_study.html  flashcards.html  index.html  login.html  lookup.html  profile.html  quiz.html  quiz_results.html  quiz_session.html  register.html  visualizations.html  word_detail.html
templates/macros/: pronunciation.html
tests/: __init__.py  test_definition_filler.py  test_extract_vocabulary_patterns.py  test_phonetic_processor.py  test_validation.py
utils/: __init__.py  ai_definition_corrector.py  calculate_tts_capacity.py  check_database.py  chunked_similarity_storage.py  circular_definition_detector.py  definition_reviewer.py  fix_progress_tracker_schema.py  high_performance_inserter.py  mysql_performance_monitor.py  populate_phonetic_metrics.py  populate_word_domains.py  resume_similarity_storage.py  setup_domain_tables.py  setup_harvesting_schema.py  setup_user_tables.py  wiktionary_reviewer.py  windows_console.py
web_apps/: __init__.py  definition_cache.db  enhanced_quiz_system.py  quiz_system.py  simple_vocab_app.py  vocabulary_web_app.py
wiktionary_crawler/: QUICKSTART.md  README.md  create_candidates_table.sql  requirements.txt  stoplist.txt  wiktionary_rare_word_crawler.py
(+7 files in other folders)
